<resources>
    <string name="app_name">WeiboSports Pro</string>
    <string name="title_breaking_news">Home</string>
    <string name="title_search_news">HighLights</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="breaking" translatable="false">Home</string>
    <string name="search">HighLights</string>
    <string name="bookmarks" translatable="false">Bookmarks</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="no_results_found">No results found</string>
    <string name="search_instructions">Tap the magnifying glass to start searching</string>
    <string name="delete_all_bookmarks">Delete all bookmarks</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>

    <string name="premier_league">Premier League</string>
    <string name="uefa_champions_league">UEFA Champions League</string>
    <string name="europa_league">Europa League</string>
    <string name="la_liga">La Liga</string>
    <string name="serie_a">Series A</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="french_ligue">French League</string>
    <string name="other">Others</string>
    <string name="save_post_tab">Save Post</string>
    <string name="save_highlights">Save Highlights</string>
    <string name="instructions">Note : You can save highlights and post in here by clicking the save post and save highlights on the list</string>
    <string name="save_post">Save Post</string>

    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="deletion_body">Do you want to delete all bookmarks?</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="search_bookmark">search</string>
    <string name="no_data">" no translation"</string>
    <string name="sort_by_date_created">Sort by date</string>
    <string name="delete_all">Delete all</string>
    <string name="is_save">is save</string>
    <string name="is_already_save">is already saved</string>
    <string name="highlights_video">"Highlights "</string>
    <string name="news_text">News</string>
    <string name="instructions_bookmark">Note: click save post or save highlight in the home and highlights tabs to save here.</string>
    <string name="home_post">Home Post</string>
    <string name="highlights_post">Highlights Post</string>
    <string name="sort_by_date">Sort by date created</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="delete_all_bookmark">Delete All</string>

    <string name="thank_you_for_visiting">Thank you for visiting.</string>

    <string name="ok">OK</string>
    <string name="powered_by_scorebat_com">Powered by Scorebat.com</string>
    <string name="stats">Stats</string>
    <string name="highlights_fragment">Highlights</string>
    <string name="news_fragment">News</string>
    <string name="click_video_to_un_mute">Click video to un-mute</string>
    <string name="click_here">Click here</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="like_post">Like</string>
    <string name="comment_post">Comment</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="throwUnexpected" translatable="false">Unexpected itemId</string>
    <string name="Invalid">Invalid</string>
    <string name="visit_website">Thank you for visiting our App. Don\'t also forget to visit our website just click the button</string>
    <string name="dont_miss_the_action">don\'t miss the action!</string>

</resources>