<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="Sort"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date" />

        </menu>

    </item>

    <item
        android:id="@+id/action_post"
        android:title="@string/home_post"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_highlights"
        android:title="@string/highlights_post"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:title="@string/delete_all_bookmark"
        app:showAsAction="never" />

</menu>