<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.details.VideoActivity"
    android:background="@color/fragment_background"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="54dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@color/black"
                tools:ignore="WebViewLayout" />

            <TextView
                android:id="@+id/text_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/click_video_to_un_mute"

                />

            <Button
                android:id="@+id/btn_clickhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:paddingLeft="5dp"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/running_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="@font/roboto_mono"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="4dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/visit_website"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>