<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookmarks.BookmarkFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/bookmark_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_highlights" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_post_tab" />
            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/instructions"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bookmark_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/header_layout"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/item_unsplash_photo" />

            <ProgressBar
                android:id="@+id/bookmark_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header_layout"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/bookmark_text_view_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/button_retry"
                android:layout_centerHorizontal="true"
                android:text="Results could not be loaded"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/bookmark_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Retry"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookmark_progress_bar"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="No results found for this query"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/bookmark_text_view_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_layout"
                tools:visibility="visible" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>